Update cover, remove spawning issues.

--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -262,10 +262,6 @@ shedding {
     I:"BuildCraft|Robotics.bcRobot.lexiconDisplaySize"=40
     I:"BuildCraft|Robotics.bcRobot.metadata"=0
     I:"BuildCraft|Robotics.bcRobot.rate"=-1
-    S:Butterfly.item=
-    I:Butterfly.lexiconDisplaySize=40
-    I:Butterfly.metadata=0
-    I:Butterfly.rate=-1
 
     # Configuration of Shedding for CaveSpider
     S:CaveSpider.item=
@@ -580,222 +576,6 @@ shedding {
     I:Giant.lexiconDisplaySize=40
     I:Giant.metadata=0
     I:Giant.rate=-1
-    S:GrimoireOfGaia.Anubis.item=
-    I:GrimoireOfGaia.Anubis.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Anubis.metadata=0
-    I:GrimoireOfGaia.Anubis.rate=-1
-    S:GrimoireOfGaia.Banshee.item=
-    I:GrimoireOfGaia.Banshee.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Banshee.metadata=0
-    I:GrimoireOfGaia.Banshee.rate=-1
-    S:GrimoireOfGaia.Baphomet.item=
-    I:GrimoireOfGaia.Baphomet.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Baphomet.metadata=0
-    I:GrimoireOfGaia.Baphomet.rate=-1
-    S:"GrimoireOfGaia.Bone Knight.item"=
-    I:"GrimoireOfGaia.Bone Knight.lexiconDisplaySize"=40
-    I:"GrimoireOfGaia.Bone Knight.metadata"=0
-    I:"GrimoireOfGaia.Bone Knight.rate"=-1
-    S:GrimoireOfGaia.Butler.item=
-    I:GrimoireOfGaia.Butler.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Butler.metadata=0
-    I:GrimoireOfGaia.Butler.rate=-1
-    S:GrimoireOfGaia.Centaur.item=
-    I:GrimoireOfGaia.Centaur.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Centaur.metadata=0
-    I:GrimoireOfGaia.Centaur.rate=-1
-    S:"GrimoireOfGaia.Cobble Golem.item"=
-    I:"GrimoireOfGaia.Cobble Golem.lexiconDisplaySize"=40
-    I:"GrimoireOfGaia.Cobble Golem.metadata"=0
-    I:"GrimoireOfGaia.Cobble Golem.rate"=-1
-    S:"GrimoireOfGaia.Cobblestone Golem.item"=
-    I:"GrimoireOfGaia.Cobblestone Golem.lexiconDisplaySize"=40
-    I:"GrimoireOfGaia.Cobblestone Golem.metadata"=0
-    I:"GrimoireOfGaia.Cobblestone Golem.rate"=-1
-    S:GrimoireOfGaia.Cockatrice.item=
-    I:GrimoireOfGaia.Cockatrice.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Cockatrice.metadata=0
-    I:GrimoireOfGaia.Cockatrice.rate=-1
-    S:GrimoireOfGaia.Creep.item=
-    I:GrimoireOfGaia.Creep.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Creep.metadata=0
-    I:GrimoireOfGaia.Creep.rate=-1
-    S:"GrimoireOfGaia.Creeper Girl.item"=
-    I:"GrimoireOfGaia.Creeper Girl.lexiconDisplaySize"=40
-    I:"GrimoireOfGaia.Creeper Girl.metadata"=0
-    I:"GrimoireOfGaia.Creeper Girl.rate"=-1
-    S:"GrimoireOfGaia.Cyan Flower.item"=
-    I:"GrimoireOfGaia.Cyan Flower.lexiconDisplaySize"=40
-    I:"GrimoireOfGaia.Cyan Flower.metadata"=0
-    I:"GrimoireOfGaia.Cyan Flower.rate"=-1
-    S:GrimoireOfGaia.Cyclops.item=
-    I:GrimoireOfGaia.Cyclops.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Cyclops.metadata=0
-    I:GrimoireOfGaia.Cyclops.rate=-1
-    S:GrimoireOfGaia.Dhampir.item=
-    I:GrimoireOfGaia.Dhampir.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Dhampir.metadata=0
-    I:GrimoireOfGaia.Dhampir.rate=-1
-    S:GrimoireOfGaia.Dryad.item=
-    I:GrimoireOfGaia.Dryad.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Dryad.metadata=0
-    I:GrimoireOfGaia.Dryad.rate=-1
-    S:GrimoireOfGaia.Dullahan.item=
-    I:GrimoireOfGaia.Dullahan.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Dullahan.metadata=0
-    I:GrimoireOfGaia.Dullahan.rate=-1
-    S:"GrimoireOfGaia.Ender Dragon Girl.item"=
-    I:"GrimoireOfGaia.Ender Dragon Girl.lexiconDisplaySize"=40
-    I:"GrimoireOfGaia.Ender Dragon Girl.metadata"=0
-    I:"GrimoireOfGaia.Ender Dragon Girl.rate"=-1
-    S:"GrimoireOfGaia.Ender Eye.item"=
-    I:"GrimoireOfGaia.Ender Eye.lexiconDisplaySize"=40
-    I:"GrimoireOfGaia.Ender Eye.metadata"=0
-    I:"GrimoireOfGaia.Ender Eye.rate"=-1
-    S:"GrimoireOfGaia.Ender Girl.item"=
-    I:"GrimoireOfGaia.Ender Girl.lexiconDisplaySize"=40
-    I:"GrimoireOfGaia.Ender Girl.metadata"=0
-    I:"GrimoireOfGaia.Ender Girl.rate"=-1
-    S:"GrimoireOfGaia.Flesh Lich.item"=
-    I:"GrimoireOfGaia.Flesh Lich.lexiconDisplaySize"=40
-    I:"GrimoireOfGaia.Flesh Lich.metadata"=0
-    I:"GrimoireOfGaia.Flesh Lich.rate"=-1
-    S:GrimoireOfGaia.FutakuchiOnna.item=
-    I:GrimoireOfGaia.FutakuchiOnna.lexiconDisplaySize=40
-    I:GrimoireOfGaia.FutakuchiOnna.metadata=0
-    I:GrimoireOfGaia.FutakuchiOnna.rate=-1
-    S:GrimoireOfGaia.Gryphon.item=
-    I:GrimoireOfGaia.Gryphon.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Gryphon.metadata=0
-    I:GrimoireOfGaia.Gryphon.rate=-1
-    S:GrimoireOfGaia.Harpy.item=
-    I:GrimoireOfGaia.Harpy.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Harpy.metadata=0
-    I:GrimoireOfGaia.Harpy.rate=-1
-    S:GrimoireOfGaia.Holstaurus.item=
-    I:GrimoireOfGaia.Holstaurus.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Holstaurus.metadata=0
-    I:GrimoireOfGaia.Holstaurus.rate=-1
-    S:GrimoireOfGaia.Hunter.item=
-    I:GrimoireOfGaia.Hunter.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Hunter.metadata=0
-    I:GrimoireOfGaia.Hunter.rate=-1
-    S:GrimoireOfGaia.Jorogumo.item=
-    I:GrimoireOfGaia.Jorogumo.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Jorogumo.metadata=0
-    I:GrimoireOfGaia.Jorogumo.rate=-1
-    S:GrimoireOfGaia.Kobold.item=
-    I:GrimoireOfGaia.Kobold.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Kobold.metadata=0
-    I:GrimoireOfGaia.Kobold.rate=-1
-    S:GrimoireOfGaia.Mandragora.item=
-    I:GrimoireOfGaia.Mandragora.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Mandragora.metadata=0
-    I:GrimoireOfGaia.Mandragora.rate=-1
-    S:GrimoireOfGaia.Mermaid.item=
-    I:GrimoireOfGaia.Mermaid.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Mermaid.metadata=0
-    I:GrimoireOfGaia.Mermaid.rate=-1
-    S:GrimoireOfGaia.Mimic.item=
-    I:GrimoireOfGaia.Mimic.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Mimic.metadata=0
-    I:GrimoireOfGaia.Mimic.rate=-1
-    S:GrimoireOfGaia.Minotaur.item=
-    I:GrimoireOfGaia.Minotaur.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Minotaur.metadata=0
-    I:GrimoireOfGaia.Minotaur.rate=-1
-    S:GrimoireOfGaia.Minotaurus.item=
-    I:GrimoireOfGaia.Minotaurus.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Minotaurus.metadata=0
-    I:GrimoireOfGaia.Minotaurus.rate=-1
-    S:GrimoireOfGaia.Naga.item=
-    I:GrimoireOfGaia.Naga.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Naga.metadata=0
-    I:GrimoireOfGaia.Naga.rate=-1
-    S:GrimoireOfGaia.NineTails.item=
-    I:GrimoireOfGaia.NineTails.lexiconDisplaySize=40
-    I:GrimoireOfGaia.NineTails.metadata=0
-    I:GrimoireOfGaia.NineTails.rate=-1
-    S:GrimoireOfGaia.Sahuagin.item=
-    I:GrimoireOfGaia.Sahuagin.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Sahuagin.metadata=0
-    I:GrimoireOfGaia.Sahuagin.rate=-1
-    S:GrimoireOfGaia.Satyr.item=
-    I:GrimoireOfGaia.Satyr.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Satyr.metadata=0
-    I:GrimoireOfGaia.Satyr.rate=-1
-    S:GrimoireOfGaia.Selkie.item=
-    I:GrimoireOfGaia.Selkie.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Selkie.metadata=0
-    I:GrimoireOfGaia.Selkie.rate=-1
-    S:GrimoireOfGaia.Shaman.item=
-    I:GrimoireOfGaia.Shaman.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Shaman.metadata=0
-    I:GrimoireOfGaia.Shaman.rate=-1
-    S:GrimoireOfGaia.Sharko.item=
-    I:GrimoireOfGaia.Sharko.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Sharko.metadata=0
-    I:GrimoireOfGaia.Sharko.rate=-1
-    S:GrimoireOfGaia.Siren.item=
-    I:GrimoireOfGaia.Siren.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Siren.metadata=0
-    I:GrimoireOfGaia.Siren.rate=-1
-    S:"GrimoireOfGaia.Slime Girl.item"=
-    I:"GrimoireOfGaia.Slime Girl.lexiconDisplaySize"=40
-    I:"GrimoireOfGaia.Slime Girl.metadata"=0
-    I:"GrimoireOfGaia.Slime Girl.rate"=-1
-    S:"GrimoireOfGaia.Sludge Girl.item"=
-    I:"GrimoireOfGaia.Sludge Girl.lexiconDisplaySize"=40
-    I:"GrimoireOfGaia.Sludge Girl.metadata"=0
-    I:"GrimoireOfGaia.Sludge Girl.rate"=-1
-    S:GrimoireOfGaia.Sphinx.item=
-    I:GrimoireOfGaia.Sphinx.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Sphinx.metadata=0
-    I:GrimoireOfGaia.Sphinx.rate=-1
-    S:GrimoireOfGaia.Spriggan.item=
-    I:GrimoireOfGaia.Spriggan.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Spriggan.metadata=0
-    I:GrimoireOfGaia.Spriggan.rate=-1
-    S:GrimoireOfGaia.Succubus.item=
-    I:GrimoireOfGaia.Succubus.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Succubus.metadata=0
-    I:GrimoireOfGaia.Succubus.rate=-1
-    S:GrimoireOfGaia.Swamper.item=
-    I:GrimoireOfGaia.Swamper.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Swamper.metadata=0
-    I:GrimoireOfGaia.Swamper.rate=-1
-    S:GrimoireOfGaia.Trader.item=
-    I:GrimoireOfGaia.Trader.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Trader.metadata=0
-    I:GrimoireOfGaia.Trader.rate=-1
-    S:GrimoireOfGaia.Valkyrie.item=
-    I:GrimoireOfGaia.Valkyrie.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Valkyrie.metadata=0
-    I:GrimoireOfGaia.Valkyrie.rate=-1
-    S:GrimoireOfGaia.Vampire.item=
-    I:GrimoireOfGaia.Vampire.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Vampire.metadata=0
-    I:GrimoireOfGaia.Vampire.rate=-1
-    S:GrimoireOfGaia.Werecat.item=
-    I:GrimoireOfGaia.Werecat.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Werecat.metadata=0
-    I:GrimoireOfGaia.Werecat.rate=-1
-    S:GrimoireOfGaia.Witch.item=
-    I:GrimoireOfGaia.Witch.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Witch.metadata=0
-    I:GrimoireOfGaia.Witch.rate=-1
-    S:"GrimoireOfGaia.Wither Cow.item"=
-    I:"GrimoireOfGaia.Wither Cow.lexiconDisplaySize"=40
-    I:"GrimoireOfGaia.Wither Cow.metadata"=0
-    I:"GrimoireOfGaia.Wither Cow.rate"=-1
-    S:GrimoireOfGaia.Yeti.item=
-    I:GrimoireOfGaia.Yeti.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Yeti.metadata=0
-    I:GrimoireOfGaia.Yeti.rate=-1
-    S:GrimoireOfGaia.Yuki-Onna.item=
-    I:GrimoireOfGaia.Yuki-Onna.lexiconDisplaySize=40
-    I:GrimoireOfGaia.Yuki-Onna.metadata=0
-    I:GrimoireOfGaia.Yuki-Onna.rate=-1
 
     # Configuration of Shedding for HardcoreEnderExpansion.AngryEnderman
     S:HardcoreEnderExpansion.AngryEnderman.item=
@@ -1270,10 +1050,6 @@ shedding {
     I:RandomThings.spirit.lexiconDisplaySize=40
     I:RandomThings.spirit.metadata=0
     I:RandomThings.spirit.rate=-1
-    S:Shark.item=
-    I:Shark.lexiconDisplaySize=40
-    I:Shark.metadata=0
-    I:Shark.rate=-1
 
     # Configuration of Shedding for Sheep
     S:Sheep.item=
@@ -1942,10 +1718,6 @@ shedding {
     I:"Void Monster.lexiconDisplaySize"=40
     I:"Void Monster.metadata"=0
     I:"Void Monster.rate"=-1
-    S:Whale.item=
-    I:Whale.lexiconDisplaySize=40
-    I:Whale.metadata=0
-    I:Whale.rate=-1
 
     # Configuration of Shedding for Witch
     S:Witch.item=
@@ -2164,142 +1936,142 @@ shedding {
     I:etfuturum.wooden_armorstand.rate=-1
 
     # Configuration of Shedding for exoticbirds.EB_Cassowary
-    S:exoticbirds.EB_Cassowary.item=
+    S:exoticbirds.EB_Cassowary.item=minecraft:feather
     I:exoticbirds.EB_Cassowary.lexiconDisplaySize=40
     I:exoticbirds.EB_Cassowary.metadata=0
-    I:exoticbirds.EB_Cassowary.rate=-1
+    I:exoticbirds.EB_Cassowary.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Duck
-    S:exoticbirds.EB_Duck.item=
+    S:exoticbirds.EB_Duck.item=minecraft:feather
     I:exoticbirds.EB_Duck.lexiconDisplaySize=40
     I:exoticbirds.EB_Duck.metadata=0
-    I:exoticbirds.EB_Duck.rate=-1
+    I:exoticbirds.EB_Duck.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Flamingo
-    S:exoticbirds.EB_Flamingo.item=
+    S:exoticbirds.EB_Flamingo.item=minecraft:feather
     I:exoticbirds.EB_Flamingo.lexiconDisplaySize=40
     I:exoticbirds.EB_Flamingo.metadata=0
-    I:exoticbirds.EB_Flamingo.rate=-1
+    I:exoticbirds.EB_Flamingo.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_GouldianFinch
-    S:exoticbirds.EB_GouldianFinch.item=
+    S:exoticbirds.EB_GouldianFinch.item=minecraft:feather
     I:exoticbirds.EB_GouldianFinch.lexiconDisplaySize=40
     I:exoticbirds.EB_GouldianFinch.metadata=0
-    I:exoticbirds.EB_GouldianFinch.rate=-1
+    I:exoticbirds.EB_GouldianFinch.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Hummingbird
-    S:exoticbirds.EB_Hummingbird.item=
+    S:exoticbirds.EB_Hummingbird.item=minecraft:feather
     I:exoticbirds.EB_Hummingbird.lexiconDisplaySize=40
     I:exoticbirds.EB_Hummingbird.metadata=0
-    I:exoticbirds.EB_Hummingbird.rate=-1
+    I:exoticbirds.EB_Hummingbird.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Kingfisher
-    S:exoticbirds.EB_Kingfisher.item=
+    S:exoticbirds.EB_Kingfisher.item=minecraft:feather
     I:exoticbirds.EB_Kingfisher.lexiconDisplaySize=40
     I:exoticbirds.EB_Kingfisher.metadata=0
-    I:exoticbirds.EB_Kingfisher.rate=-1
+    I:exoticbirds.EB_Kingfisher.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Kiwi
-    S:exoticbirds.EB_Kiwi.item=
+    S:exoticbirds.EB_Kiwi.item=minecraft:feather
     I:exoticbirds.EB_Kiwi.lexiconDisplaySize=40
     I:exoticbirds.EB_Kiwi.metadata=0
-    I:exoticbirds.EB_Kiwi.rate=-1
+    I:exoticbirds.EB_Kiwi.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Lyrebird
-    S:exoticbirds.EB_Lyrebird.item=
+    S:exoticbirds.EB_Lyrebird.item=minecraft:feather
     I:exoticbirds.EB_Lyrebird.lexiconDisplaySize=40
     I:exoticbirds.EB_Lyrebird.metadata=0
-    I:exoticbirds.EB_Lyrebird.rate=-1
+    I:exoticbirds.EB_Lyrebird.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Magpie
-    S:exoticbirds.EB_Magpie.item=
+    S:exoticbirds.EB_Magpie.item=minecraft:feather
     I:exoticbirds.EB_Magpie.lexiconDisplaySize=40
     I:exoticbirds.EB_Magpie.metadata=0
-    I:exoticbirds.EB_Magpie.rate=-1
+    I:exoticbirds.EB_Magpie.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Ostrich
-    S:exoticbirds.EB_Ostrich.item=
+    S:exoticbirds.EB_Ostrich.item=minecraft:feather
     I:exoticbirds.EB_Ostrich.lexiconDisplaySize=40
     I:exoticbirds.EB_Ostrich.metadata=0
-    I:exoticbirds.EB_Ostrich.rate=-1
+    I:exoticbirds.EB_Ostrich.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Owl
-    S:exoticbirds.EB_Owl.item=
+    S:exoticbirds.EB_Owl.item=minecraft:feather
     I:exoticbirds.EB_Owl.lexiconDisplaySize=40
     I:exoticbirds.EB_Owl.metadata=0
-    I:exoticbirds.EB_Owl.rate=-1
+    I:exoticbirds.EB_Owl.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Parrot
-    S:exoticbirds.EB_Parrot.item=
+    S:exoticbirds.EB_Parrot.item=minecraft:feather
     I:exoticbirds.EB_Parrot.lexiconDisplaySize=40
     I:exoticbirds.EB_Parrot.metadata=0
-    I:exoticbirds.EB_Parrot.rate=-1
+    I:exoticbirds.EB_Parrot.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Peafowl
-    S:exoticbirds.EB_Peafowl.item=
+    S:exoticbirds.EB_Peafowl.item=minecraft:feather
     I:exoticbirds.EB_Peafowl.lexiconDisplaySize=40
     I:exoticbirds.EB_Peafowl.metadata=0
-    I:exoticbirds.EB_Peafowl.rate=-1
+    I:exoticbirds.EB_Peafowl.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Pelican
-    S:exoticbirds.EB_Pelican.item=
+    S:exoticbirds.EB_Pelican.item=minecraft:feather
     I:exoticbirds.EB_Pelican.lexiconDisplaySize=40
     I:exoticbirds.EB_Pelican.metadata=0
-    I:exoticbirds.EB_Pelican.rate=-1
+    I:exoticbirds.EB_Pelican.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Penguin
-    S:exoticbirds.EB_Penguin.item=
+    S:exoticbirds.EB_Penguin.item=minecraft:feather
     I:exoticbirds.EB_Penguin.lexiconDisplaySize=40
     I:exoticbirds.EB_Penguin.metadata=0
-    I:exoticbirds.EB_Penguin.rate=-1
+    I:exoticbirds.EB_Penguin.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Phoenix
-    S:exoticbirds.EB_Phoenix.item=
+    S:exoticbirds.EB_Phoenix.item=minecraft:feather
     I:exoticbirds.EB_Phoenix.lexiconDisplaySize=40
     I:exoticbirds.EB_Phoenix.metadata=0
-    I:exoticbirds.EB_Phoenix.rate=-1
+    I:exoticbirds.EB_Phoenix.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Pigeon
-    S:exoticbirds.EB_Pigeon.item=
+    S:exoticbirds.EB_Pigeon.item=minecraft:feather
     I:exoticbirds.EB_Pigeon.lexiconDisplaySize=40
     I:exoticbirds.EB_Pigeon.metadata=0
-    I:exoticbirds.EB_Pigeon.rate=-1
+    I:exoticbirds.EB_Pigeon.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Roadrunner
-    S:exoticbirds.EB_Roadrunner.item=
+    S:exoticbirds.EB_Roadrunner.item=minecraft:feather
     I:exoticbirds.EB_Roadrunner.lexiconDisplaySize=40
     I:exoticbirds.EB_Roadrunner.metadata=0
-    I:exoticbirds.EB_Roadrunner.rate=-1
+    I:exoticbirds.EB_Roadrunner.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Seagull
-    S:exoticbirds.EB_Seagull.item=
+    S:exoticbirds.EB_Seagull.item=minecraft:feather
     I:exoticbirds.EB_Seagull.lexiconDisplaySize=40
     I:exoticbirds.EB_Seagull.metadata=0
-    I:exoticbirds.EB_Seagull.rate=-1
+    I:exoticbirds.EB_Seagull.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Swan
-    S:exoticbirds.EB_Swan.item=
+    S:exoticbirds.EB_Swan.item=minecraft:feather
     I:exoticbirds.EB_Swan.lexiconDisplaySize=40
     I:exoticbirds.EB_Swan.metadata=0
-    I:exoticbirds.EB_Swan.rate=-1
+    I:exoticbirds.EB_Swan.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Toucan
-    S:exoticbirds.EB_Toucan.item=
+    S:exoticbirds.EB_Toucan.item=minecraft:feather
     I:exoticbirds.EB_Toucan.lexiconDisplaySize=40
     I:exoticbirds.EB_Toucan.metadata=0
-    I:exoticbirds.EB_Toucan.rate=-1
+    I:exoticbirds.EB_Toucan.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Vulture
-    S:exoticbirds.EB_Vulture.item=
+    S:exoticbirds.EB_Vulture.item=minecraft:feather
     I:exoticbirds.EB_Vulture.lexiconDisplaySize=40
     I:exoticbirds.EB_Vulture.metadata=0
-    I:exoticbirds.EB_Vulture.rate=-1
+    I:exoticbirds.EB_Vulture.rate=26000
 
     # Configuration of Shedding for exoticbirds.EB_Woodpecker
-    S:exoticbirds.EB_Woodpecker.item=
+    S:exoticbirds.EB_Woodpecker.item=minecraft:feather
     I:exoticbirds.EB_Woodpecker.lexiconDisplaySize=40
     I:exoticbirds.EB_Woodpecker.metadata=0
-    I:exoticbirds.EB_Woodpecker.rate=-1
+    I:exoticbirds.EB_Woodpecker.rate=26000
     S:failed_chicken.item=
     I:failed_chicken.lexiconDisplaySize=40
     I:failed_chicken.metadata=0
