Cleanup and update various fixes.

--- a/config/DraconicEvolution.cfg
+++ b/config/DraconicEvolution.cfg
@@ -42,6 +42,7 @@ general {
 
     # add the unlocalized name of a block or item to this list to disable it [default: ]
     S:"Disabled Blocks & Items" <
+        DraconicEvolution:dezilsMarshmallow
      >
 
     # Sets the exact location to spawn the dragon egg and disables the portal spawn (dose not effect vanilla dragon)
