--- a/config/butterflymania.cfg
+++ b/config/butterflymania.cfg
@@ -24,10 +24,23 @@ entitynames {
 
 player-bb7c2ac3-72aa-4ad8-8e00-4e0fb67a51ec {
     I:catch-10=1
-    I:catch-106=2
+    I:catch-106=3
     I:catch-11=1
-    I:catch-167=1
+    I:catch-167=2
+    I:catch-49=1
     I:catch-85=1
+}
+
+
+world--6435887494524058487 {
+    I:extinct-115=3
+    I:extinct-134=6
+    I:extinct-148=7
+    I:extinct-154=4
+    I:extinct-156=6
+    I:extinct-201=10
+    I:extinct-43=9
+    I:extinct-88=5
 }
 
 
