--- a/config/ESM.cfg
+++ b/config/ESM.cfg
@@ -146,7 +146,7 @@ Main {
     B:"Villager Targeting"=true
 
     # How many days until ESM spawns mobs at full rate. [range: 0 ~ 2147483647, default: 7]
-    I:"Warm Up Days"=28
+    I:"Warm Up Days"=32
     B:"Xray Mobs"=true
 }
 
@@ -198,7 +198,7 @@ World {
      >
     B:"Spawn Forts"=true
     B:"Use New End"=false
-    B:"Use New Nether"=true
+    B:"Use New Nether"=false
 }
 
 
