--- a/config/ESM.cfg
+++ b/config/ESM.cfg
@@ -25,7 +25,7 @@
      >
 
     # Mobs are passive until provoked [default: false]
-    B:"Neutral Mobs"=true
+    B:"Neutral Mobs"=false
     I:"Potion Buff Chance (0-100)"=1
 
     # List of all the valid potion IDs a mob can spawn with. Amplifier is always x1
@@ -42,9 +42,10 @@
 
 Blaze {
     I:"Dimension Blacklist" <
+        0
      >
-    I:Fireballs=9
-    I:Rarity=9
+    I:Fireballs=5
+    I:Rarity=18
     B:Spawn=true
 }
 
@@ -61,8 +62,8 @@ Creeper {
     # Creepers will run at you at speed before detonating [default: true]
     B:Chargering=true
     B:Napalm=true
-    B:Powered=true
-    I:"Powered Rarity"=9
+    B:Powered=false
+    I:"Powered Rarity"=18
 }
 
 
@@ -90,6 +91,7 @@ Enderman {
 Ghast {
     B:Breaching=true
     I:"Dimension Blacklist" <
+        0
      >
     D:"Fire Delay"=1.0
     D:"Fire Distance"=64.0
@@ -101,11 +103,14 @@ Ghast {
 Main {
     S:"AI Exempt Mob IDs" <
         VillagerGolem
+        EnderZoo.enderzoo.Enderminy
+        crazypants.enderzoo.entity.EntityEnderminy
+        EntityEnderminy
      >
     B:"Allow Sleep"=false
 
     # If set to true, ESM will not check whether the entity is a mob or not when setting up new AI
-    B:"Ambiguous AI"=true
+    B:"Ambiguous AI"=false
     B:"Apocalypse Mode"=false
 
     # Mobs will attack player owned pets [default: true]
@@ -183,6 +188,8 @@ Witch {
 
 World {
     I:"Fort Dimensions" <
+        -2
+        -1
      >
     I:"Fort Distance"=1024
     I:"Fort Rarity"=100
@@ -207,7 +214,7 @@ Zombie {
     B:"Blacklist to Whitelist"=false
 
     # Zombies can placed armed TNT
-    B:"Demolition Zombies"=true
+    B:"Demolition Zombies"=false
     B:Diggers=true
 
     # Blacklisted blocks for digging (Add ':#' for metadata e.g. 'minecraft:wool:1')
