--- a/config/HungerOverhaul/HungerOverhaul.cfg
+++ b/config/HungerOverhaul/HungerOverhaul.cfg
@@ -242,7 +242,7 @@ health {
     I:foodHealDivider=4
 
     # Eating food regenerates health [vanilla: false] [default: false]
-    B:foodRegensHealth=false
+    B:foodRegensHealth=true
 
     # Speed up or slow down the rate that health regenerates (0 to disable regen) [vanilla: 100] [range: 0 ~ 2147483647, default: 100]
     I:healthRegenRatePercentage=80
