--- a/config/MatterOverdrive/Matter Overdrive.cfg
+++ b/config/MatterOverdrive/Matter Overdrive.cfg
@@ -146,6 +146,70 @@ entities {
             Sky
             MushroomIsland
             MushroomIslandShore
+            Ocean
+            Plains
+            Desert
+            Extreme Hills
+            Forest
+            Taiga
+            Swampland
+            River
+            FrozenOcean
+            FrozenRiver
+            Ice Plains
+            Ice Mountains
+            Beach
+            DesertHills
+            ForestHills
+            TaigaHills
+            Extreme Hills Edge
+            Jungle
+            JungleHills
+            Caves
+            Deep Ocean
+            Stone Beach
+            Cold Beach
+            Birch Forest
+            Birch Forest Hills
+            Roofed Forest
+            Cold Taiga
+            Cold Taiga Hills
+            Mega Taiga
+            Mega Taiga Hills
+            Extreme Hills+
+            Savanna
+            Savanna Plateau
+            Mesa
+            Mesa Plateau
+            Mesa Plateau For
+            Ender Forest
+            Rainbow Forest
+            Desert Oil Field
+            Ocean Oil Field
+            Sunflower Plains
+            Desert M
+            Extreme Hills M
+            Flower Forest
+            Taiga M
+            Swampland M
+            Ice Plains Spikes
+            Jungle
+            JungleEdge
+            Birch Forest M
+            Birch Forest Hills M
+            Roofed Forest M
+            Cold Taiga M
+            Mega Spruce Taiga
+            Extreme Hills+ M
+            Savanna M
+            Savanna Plateau M
+            Mesa (Bryce)
+            Mesa Plateau F M
+            Mesa Plateau M
+            Magical Forest
+            Eerie
+            Tainted Land
+            Eldritch
          >
 
         # Rogue Android biome whitelist [default: ]
@@ -154,6 +218,10 @@ entities {
 
         # Rogue Android Dimension ID blacklist
         I:dimension.blacklist <
+            0
+            1
+            2
+            -2
          >
 
         # Rogue Android Dimension ID whitelist
@@ -183,13 +251,13 @@ entities {
          >
 
         # The max amount of Rogue Android that can spawn in a given chunk
-        I:max_android_per_chunk=4
+        I:max_android_per_chunk=1
 
         # The spawn change of the Rogue Android [range: 0 ~ 100, default: 15]
-        I:spawn_chance=15
+        I:spawn_chance=5
 
         # Do Ranged Rogue Androids have unlimited weapon energy in their weapons [default: true]
-        B:unlimited_weapon_energy=true
+        B:unlimited_weapon_energy=false
     }
 
 }
@@ -487,6 +555,7 @@ starmap {
     gravitational_anomaly {
         # Gravitational Anomaly Dimension ID blacklist
         I:blacklist <
+            0
          >
 
         # Spawn Chance of Gravity Anomaly pre chunk [range: 0.0 ~ 1.0, default: 0.005]
