--- a/config/butterflymania.cfg
+++ b/config/butterflymania.cfg
@@ -5,7 +5,7 @@ butterflies {
     I:scalefactor=8
 
     # Set to 'reduced' for less butterflies spawning [default: normal]
-    S:spawnrate=normal
+    S:spawnrate=reduced
 
     # Whether or not to spawn butterflies in certain structures (nether stronghold, jungle temple, etc.), might fix random crashes [default: true]
     B:structurechecks=true
@@ -41,6 +41,30 @@ world--6435887494524058487 {
     I:extinct-201=10
     I:extinct-43=9
     I:extinct-88=5
+}
+
+
+world--8416416220076126772 {
+    I:extinct-115=25
+    I:extinct-134=10
+    I:extinct-148=22
+    I:extinct-154=12
+    I:extinct-156=12
+    I:extinct-201=24
+    I:extinct-43=27
+    I:extinct-88=18
+}
+
+
+world-2736201179831411304 {
+    I:extinct-115=25
+    I:extinct-134=13
+    I:extinct-148=16
+    I:extinct-154=24
+    I:extinct-156=28
+    I:extinct-201=11
+    I:extinct-43=25
+    I:extinct-88=14
 }
 
 
