--- a/config/enderzoo/EnderZoo.cfg
+++ b/config/enderzoo/EnderZoo.cfg
@@ -200,7 +200,7 @@ enchantments {
 
 enderminy {
     # Attack damage of Enderminies. 7=Enderman damage, 3=Zombie damage
-    I:enderminyAttackDamage=10
+    I:enderminyAttackDamage=1
 
     # When true Enderminies will attack creepers [default: true]
     B:enderminyAttacksCreepers=true
@@ -209,13 +209,13 @@ enderminy {
     B:enderminyAttacksPlayerOnSight=false
 
     # Wether Enderminies are enabled [default: true]
-    B:enderminyEnabled=true
+    B:enderminyEnabled=false
 
     # When true attacking one Enderminy will cause other Enderminies who witness the attack to attack the player as well [default: true]
     B:enderminyGroupAgro=true
 
     # Health of Enderminies. 40=Enderman health, 20=Zombie health
-    I:enderminyHealth=20
+    I:enderminyHealth=5
 
     # Maximum number of Enderminies that will spawn in a single group
     I:enderminyMaxGroupSize=3
