--- a/config/enviromine/Global_Settings.cfg
+++ b/config/enviromine/Global_Settings.cfg
@@ -17,7 +17,7 @@ Config {
 
 Gases {
     # Disables all gases and slowly deletes existing pockets
-    B:"Disable Gases"=false
+    B:"Disable Gases"=true
 
     # How many gases can be processed in a single pass per chunk (-1 = infinite)
     I:"Gas Pass Limit"=1024
