--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -50,7 +50,7 @@
     B:"Make ThaumCraft integration require ThaumCraft progression"=true
     I:"Max Accelerator Lag in NanoSeconds"=1000000
     B:"Nether Crystals"=true
-    B:"Notify players of progress gains"=true
+    B:"Notify players of progress gains"=false
     B:"Notify players via chat of their own progress gains"=true
     B:"Pylons Chunkload Selves Once Used"=true
     I:"Rainbow Forest Animal Density"=6
