--- a/config/ESM.cfg
+++ b/config/ESM.cfg
@@ -51,7 +51,7 @@ Blaze {
 
 
 Creeper {
-    B:Breaching=true
+    B:Breaching=false
 
     # AND HIS NAME IS... [default: false]
     B:"Cena Creeper"=false
@@ -60,7 +60,7 @@ Creeper {
     I:"Cena Creeper Rarity"=9
 
     # Creepers will run at you at speed before detonating [default: true]
-    B:Chargering=true
+    B:Chargering=false
     B:Napalm=true
     B:Powered=false
     I:"Powered Rarity"=18
@@ -103,9 +103,6 @@ Ghast {
 Main {
     S:"AI Exempt Mob IDs" <
         VillagerGolem
-        EnderZoo.enderzoo.Enderminy
-        crazypants.enderzoo.entity.EntityEnderminy
-        EntityEnderminy
      >
     B:"Allow Sleep"=false
 
@@ -211,7 +208,7 @@ World {
 
 Zombie {
     # Use the digging blacklist as a whitelist instead
-    B:"Blacklist to Whitelist"=false
+    B:"Blacklist to Whitelist"=true
 
     # Zombies can placed armed TNT
     B:"Demolition Zombies"=false
@@ -219,6 +216,12 @@ Zombie {
 
     # Blacklisted blocks for digging (Add ':#' for metadata e.g. 'minecraft:wool:1')
     S:"Digging Blacklist" <
+        minecraft:stone
+        minecraft:cobblestone
+        minecraft:dirt
+        minecraft:grass
+        minecraft:gravel
+        minecraft:sand
      >
 
     # What blocks will be targeted for destruction when not attacking players (Does not affect general digging, light sources are included by default, add ':#' for metadata e.g. 'minecraft:wool:1')
