--- a/config/ESM.cfg
+++ b/config/ESM.cfg
@@ -84,7 +84,7 @@ Enderman {
     B:"Player Teleport"=true
 
     # Makes Endermen stalk players with side effects
-    B:Slender-Mode=false
+    B:Slender-Mode=true
 }
 
 
@@ -102,7 +102,8 @@ Ghast {
 
 Main {
     S:"AI Exempt Mob IDs" <
-        VillagerGolem
+        Zombie
+        Endermen
      >
     B:"Allow Sleep"=false
 
@@ -119,7 +120,7 @@ Main {
     B:"Enforce Defaults"=true
 
     # Flips the exemption listing to whitelist mode [default: false]
-    B:"Flip Exemtions"=false
+    B:"Flip Exemtions"=true
 
     # Forces non pathing mobs to attack from further away. Can cause additional lag
     B:"Force Non-AI Pathing"=false
