--- a/config/Thaumcraft.cfg
+++ b/config/Thaumcraft.cfg
@@ -130,7 +130,7 @@ monster_spawning {
     B:spawn_angry_zombies=true
     B:spawn_eldercreatures=true
     B:spawn_fire_bats=true
-    B:spawn_pechs=true
+    B:spawn_pechs=false
     B:spawn_taint_spores=true
     B:spawn_taintacles=true
     B:spawn_wisps=true
