--- a/config/ToolUtilities.cfg
+++ b/config/ToolUtilities.cfg
@@ -2,7 +2,7 @@
 
 areamining {
     # Item required for 1x3 AoE Mining
-    S:1x3Item=minecraft:coal
+    S:1x3Item=minecraft:diamond
 
     # Number of levels required for 3x3 Mining
     I:1x9XPRequired=30
@@ -11,7 +11,7 @@ areamining {
     S:3x1blacklist=
 
     # Item required for 3x3 AoE Mining
-    S:3x3Item=minecraft:coal
+    S:3x3Item=minecraft:diamond
 
     # Unlocalized name of tools for blacklisting (Comma separated)
     S:3x3blacklist=
@@ -43,7 +43,7 @@ featuresallowed {
     B:allow3x3Hoe=true
     B:allow3x3Pick=true
     B:allow3x3Shovel=true
-    B:allowPlace=true
+    B:allowPlace=false
     B:allowSwordAOE=true
 }
 
@@ -70,7 +70,7 @@ modules {
 
 rightclick {
     # Enable Right Click Placing
-    B:Enable=true
+    B:Enable=false
 
     # Item required for Right Click Placing
     S:Item=minecraft:torch
@@ -91,7 +91,7 @@ swordarea {
     S:blacklist=
 
     # Item required for the sword AOE upgrade
-    S:swordAreaItem=minecraft:feather
+    S:swordAreaItem=minecraft:emerald
 
     # XP required for the sword AOE upgrade
     I:swordAreaXP=10
